# Titan-Oanda-Enhanced

./: .env.example  AGENTS.MD  README.md  Titan Workspace Rules.md  USER_GUIDE.md  check_env.py  direct_test.txt  env_check_result.txt  output.txt  pyproject.toml  test_debug_import.py  test_import.py  verify_conn.txt  walkthrough.md
config/: instruments.toml  mtf.toml  mtf_5m.toml
directives/: Alpha Research Loop (VectorBT).md  Deployment Options.md  Ensemble Strategy Framework.md  Gaussian Channel Confluence Strategy.md  Gaussian Channel Strategy Porting.md  Live Deployment and Monitoring.md  MTF Optimization Protocol.md  Machine Learning Strategy Discovery.md  Multi-Timeframe Confluence.md  Nautilus Oanda Adapter.md  Nautilus-Oanda Adapter Construction.md  Strategy Deployment Protocol.md  Titan Library Reference.md  Titan Package Architecture.md  Titan-Oanda Adapter Guide.md  Workspace Initialisation.md  Workspace Structure.md
execution/: build_docker_image.py  download_oanda_data.py  run_gaussian_optimisation.py  run_live_mtf.py  run_ml_strategy.py  run_mtf_backtest.py  run_mtf_optimisation.py  run_mtf_portfolio.py  run_mtf_stage2.py  run_mtf_stage3.py  run_nautilus_live.py  setup_env.py
reports/: feature_scoreboard_EUR_USD.json
scripts/: build_docker.py  check_env.py  check_oanda_positions.py  close_all_positions.py  debug_reconciliation.py  deduce_account_state.py  deduce_account_state_iterative.py  download_data.py  fetch_instruments.py  find_account_report.py  inspect_bar.py  inspect_client_methods.py  inspect_nautilus.py  inspect_nautilus_deep.py  (+16 more)
(+54 files in other folders)
